<resources>
    <string name="app_name">Notifyr</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tab_0">Home</string>
    <string name="menu_tab_1">My Interests</string>
    <string name="menu_tab_2">Discover</string>
    <string name="menu_tab_3">Notifications</string>
    <string name="menu_tab_4">Settings</string>
    <string name="empty"></string>

    <string name="home_frag">home_frag</string>
    <string name="myitems_frag">myitems_frag</string>
    <string name="discover_frag">discover_frag</string>
    <string name="notifications_frag">notifications_frag</string>
    <string name="settings_frag">settings_frag</string>

    <string name="service_name">Notifyr Background Service</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="text">Squid blog crucifix Marfa, consectetur vero placeat mixtape. Non seitan sriracha eu, do Banksy fashion axe cred qui vegan delectus consequat Helvetica mollit. XOXO gluten-free disrupt, gastropub officia cliche chillwave hella pop-up. Fixie swag raw denim, YOLO craft beer assumenda occupy veniam photo booth pug consectetur next level Portland tote bag +1. Mlkshk PBR aliquip placeat Wes Anderson.</string>
    <string name="title">My Description</string>
    <string name="context_menu">Context menu</string>


    <!-- ARTICLES/HOMEE -->
    <string name="noArticlesNothingFoundTopText">Nothing Here.</string>
    <string name="noArticlesNothingFoundBottomText"></string>

    <!-- MY INTERESTS -->
    <string name="mi_nothingFoundTopText">You have no interests.</string>
    <string name="mi_nothingFoundBottomText">Add interests by pressing the + button to start receiving notifications</string>

    <!-- NOTIFICATIONS -->
    <string name="notif_nothingFoundTopText">You have no new notifications.</string>
    <string name="notif_nothingFoundBottomText">Notifications sent to your device will appear here.</string>

    <!-- DISCOVER -->
    <string name="header_you_might_like">You might be interested in...</string>
    <string name="people_like">Popular right now...</string>




</resources>
