<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/menu_tab_0"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_interests"
        android:enabled="true"
        android:icon="@mipmap/ic_star_border_black_24dp"
        android:title="@string/menu_tab_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_discover"
        android:enabled="true"
        android:icon="@mipmap/ic_explore_black_24dp"
        android:title="@string/menu_tab_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@mipmap/ic_notifications_none_black_24dp"
        android:title="@string/menu_tab_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/menu_tab_4"
        app:showAsAction="never" />
</menu>